# plotly-qc

./: .gitignore  README.md  Taskfile.yml  duties.py  pyproject.toml
.github/workflows/: python-package.yml
notebooks/: dataflow.py  intro.py  usage_example.py
src/plotly_qc/: __init__.py  plotting.py
tests/: test_plotting.py
