[project]
name = "plotly-qc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kugeleis", email = "kugeleis@wbrief.de" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
]

[project.scripts]
plotly-qc = "plotly_qc:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "duty>=1.6.3",
    "marimo>=0.17.8",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "pytest-xdist>=3.6.1",
]
